added store activity

--- a/android-frontend/app/src/main/AndroidManifest.xml
+++ b/android-frontend/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".StoreDetailsActivity"
+            android:label="@string/title_activity_store_details"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
