--- a/android-frontend/app/src/main/AndroidManifest.xml
+++ b/android-frontend/app/src/main/AndroidManifest.xml
@@ -31,7 +31,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".LoginSecondActivity" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
