--- a/android-frontend/app/build.gradle
+++ b/android-frontend/app/build.gradle
@@ -4,12 +4,12 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "xpmxp1.tenderstar"
+        multiDexEnabled true
         minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -22,7 +22,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -32,15 +32,22 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    implementation "android.arch.paging:runtime:1.0.0-beta1"
-    testImplementation "android.arch.core:core-testing:1.1.1"
+    // Room (use 1.1.0-beta3 for latest beta)
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+    // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:1.0.0"
 
-    androidTestCompile 'com.android.support.test:rules:1.0.1'
-    androidTestCompile 'com.android.support:support-annotations:26.1.0'
-    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    // ViewModel and LiveData
+    //implementation "android.arch.lifecycle:extensions:1.1.1"
+
+    //annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+
+    // Paging
+    //implementation "android.arch.paging:runtime:1.0.0-rc1"
+
+    // Test helpers for LiveData
+    //testImplementation "android.arch.core:core-testing:1.1.1"
+
 }
