--- a/android-frontend/app/build.gradle
+++ b/android-frontend/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
 
     // Room (use 1.1.0-beta3 for latest beta)
     implementation "android.arch.persistence.room:runtime:1.0.0"
