--- a/android-frontend/app/src/main/AndroidManifest.xml
+++ b/android-frontend/app/src/main/AndroidManifest.xml
@@ -12,15 +12,14 @@
     <application
         android:name=".CustomApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_4"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon_4"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Start">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
